Add admin error reports view
